src/styles/fotnav-res.css
:root {
    --primary: #335846;
    --secondary: #DEB887;
    --buttton: #00BCFF;
    --textlight: #FDFDFD;
    --textdrak: #0F172A;

    --font-weight-heading: 700;
    --font-weight-body: 400;

    --font-size-h1: 3rem;
    --font-size-h2: 2.25rem;
    --font-size-h3: 1.875rem;
    --font-size-h4: 1.5rem;
    --font-size-h5: 1.25rem;

    --font-size-body1: 1.25rem;
    --font-size-body2: 1rem;
    --font-size-body3: 0.875rem;
    --font-size-body4: 0.75rem;
}
@media screen and (max-width: 1024px){
    /* navbar */
    .container {
        padding-inline:50px;
        padding-block: 20px;
    }
    .input-container{
         width: 360px;
    }
    /* footer */
    .footer-row, .copy-right{
        padding-inline: 100px;
    }
}
@media screen and (max-width: 768px){
    /* navbar */

    #search{
        padding-block: 10px;
    }
   #search-nav{
        display: flex;
   }
    
    .wrapp-nav{
        flex-wrap: wrap;
        position: relative;
        /* position: absolute; */
        width: 100%;
        /* background: var(--primary); */
    }
    .navigation{
        flex-direction: column;
        position: absolute;
        top: 87px;
        left: 0;
        /* right: 0; */
        padding-inline: 50px;
        width: 100%;
        height: 0;
        transition: .5s;
        overflow: hidden;
        background: var(--secondary);
        opacity: 0;
        justify-content: center;
    }
    .navigation.active{
        height: 300px;
        opacity: 1;
    }

    /* end Navbar  */
    .search{
        display: none;
    }
    .hamburger {
        display: flex;
        align-items: center;
        cursor: pointer;
    }
    /* footer */
    .footer-row, .copy-right{
        padding-inline: 80px;
    }
    .sosial-media{
        display: flex;
        justify-content: center;
    }
}
@media screen and (max-width: 425px){
    /* navbar */
    .language p{
        display: none;
    }
    .container{
        padding-inline: 20px;
    }
    .login-register{
        display: none;
    }
    .disable-login{
        display: block;
    }
    .disable-login{
        padding-block: 10px;
        /* padding-inline: 10px; */
        justify-content: center;
        width: 150px;
        background: var(--buttton);
        border-radius: 5px;
        color: var(--textlight);
        text-align: center;
    }
    .emergency-call p{
        display: none;
    
    }
    .logo h4{
        font-size: var(--font-size-h5);
    }
    .navigation{
        padding-inline: 20px;
    }
    /* footer */
    .footer-row, .copy-right{
        padding-inline: 30px;
    }
    .copy-right{
        flex-direction: column;
        align-items: center;
    }
    
    .respon-news{
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

@media screen and (max-width: 375px){
    /* navbar */
    .input-container{
        max-width: 300px;
    }
    .footer-row, .copy-right{
        padding-inline: 15px;
    }
    .copy-right{
        flex-direction: column;
        align-items: center;
    }
    
    .respon-news{
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

}
@media screen and (max-width: 320px){
    .input-container {
        max-width: 250px;
    } 
    .footer-row{
        justify-content: center;
        text-align: center;
    }
}

